Move hafbe apps to hafah

--- a/rewrite_rules.conf
+++ b/rewrite_rules.conf
@@ -1,10 +1,19 @@
+rewrite ^/block-number-by-date/([^/]+) /rpc/get_block_by_time?timestamp=$1 break;
+# endpoint for get /block-number-by-date/{timestamp}
+
+rewrite ^/global-state /rpc/get_block break;
+# endpoint for get /global-state
+
+rewrite ^/headblock /rpc/get_head_block_num break;
+# endpoint for get /headblock
+
 rewrite ^/version /rpc/get_version break;
 # endpoint for get /version
 
 rewrite ^/accounts/([^/]+)/operation-types /rpc/get_acc_op_types?account-name=$1 break;
 # endpoint for get /accounts/{account-name}/operation-types
 
-rewrite ^/accounts/([^/]+)/operations /rpc/get_account_history?account-name=$1 break;
+rewrite ^/accounts/([^/]+)/operations /rpc/get_ops_by_account?account-name=$1 break;
 # endpoint for get /accounts/{account-name}/operations
 
 rewrite ^/transactions/([^/]+) /rpc/get_transaction?transaction-id=$1 break;
@@ -22,7 +31,7 @@ rewrite ^/operations/([^/]+) /rpc/get_operation?operation-id=$1 break;
 rewrite ^/operations /rpc/get_operations break;
 # endpoint for get /operations
 
-rewrite ^/blocks/([^/]+)/operations /rpc/get_ops_in_block?block-num=$1 break;
+rewrite ^/blocks/([^/]+)/operations /rpc/get_ops_by_block_paging?block-num=$1 break;
 # endpoint for get /blocks/{block-num}/operations
 
 rewrite ^/blocks/([^/]+)/header /rpc/get_block_header?block-num=$1 break;
