--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -33,7 +33,7 @@ variables:
 
 
   # Variables required by Common CI jobs
-  TOX_IMAGE_TAG: "1ce04340ebfe838fd7fa09aebdde3bd7e1218bce"
+  TOX_IMAGE_TAG: "12db226cfde2df929bb8bcb0c7c51d04c8900d32"
   BUILDER_IMAGE_PATH: "registry.gitlab.syncad.com/hive/haf/ci-base-image${BUILDER_IMAGE_TAG}"
 
   # Variables specific to runner (there is single runner cache and there is 5m block_log available)
@@ -47,11 +47,12 @@ include:
     ref: f2cec24d714fe31444313e151662a7220ac2b2ee # develop
     file: '/scripts/ci-helpers/prepare_data_image_job.yml'
   - project: 'hive/common-ci-configuration'
-    ref: 1ce04340ebfe838fd7fa09aebdde3bd7e1218bce # develop # It seems a variable cannot be used here
+    ref: 12db226cfde2df929bb8bcb0c7c51d04c8900d32 # develop # It seems a variable cannot be used here
     file:
       - '/templates/test_jobs.gitlab-ci.yml'
       - '/templates/python_projects.gitlab-ci.yml'
       - '/templates/cache_cleanup.gitlab-ci.yml'
+      - '/templates/npm_projects.gitlab-ci.yml'
 
 verify_poetry_lock_sanity:
   extends: .verify_poetry_lock_sanity_template
@@ -95,6 +96,28 @@ prepare_haf_image:
   tags:
     - public-runner-docker
     - hived-for-tests
+
+extract-swagger-json:
+  extends: .filter_out_swagger_json
+  stage: build
+  variables:
+    INPUT_SQL_SWAGGER_FILE: "${CI_PROJECT_DIR}/postgrest/hafah_REST/hafah_openapi.sql"
+  tags:
+    - public-runner-docker
+
+generate-wax-spec:
+  extends: .generate_swagger_package
+  stage: build
+  variables:
+    INPUT_JSON_SWAGGER_FILE: "${BUILT_JSON_SWAGGER_FILE}"
+    NAMESPACE: "hafah"
+    NPM_PACKAGE_SCOPE: "@hiveio"
+    NPM_PACKAGE_NAME: "wax-api-hafah"
+  needs:
+    - job: extract-swagger-json
+      artifacts: true
+  tags:
+    - public-runner-docker
 
 prepare_haf_data:
   extends: .prepare_haf_data_5m
@@ -429,3 +452,30 @@ hafah_pytest_fuctional_tests_part2:
   extends: .hafah_pytest_fuctional_tests_base
   variables:
     PYTEST_MARK: "get_account_history_and_get_transaction"
+
+deploy-wax-spec-dev-package:
+  extends: .npm_deploy_package_template
+  stage: publish
+  variables:
+    SOURCE_DIR: "${PACKAGE_SOURCE_DIR}"
+    PACKAGE_TGZ_PATH: "${BUILT_PACKAGE_PATH}"
+    NPM_PACKAGE_SCOPE: "@hiveio"
+  needs:
+    - job: generate-wax-spec
+      artifacts: true
+  tags:
+    - public-runner-docker
+
+deploy-wax-spec-production-public-npm:
+  extends: .registry_npmjs_org_deploy_package_template
+  stage: publish
+  variables:
+    NPM_PUBLISH_TOKEN: "$INTERNAL_HIDDEN_PUBLISH_TOKEN"
+    NPM_PACKAGE_NAME: "wax-api-hafah"
+    SOURCE_DIR: "${PACKAGE_SOURCE_DIR}"
+    PACKAGE_TGZ_PATH: "${BUILT_PACKAGE_PATH}"
+  needs:
+    - job: generate-wax-spec
+      artifacts: true
+  tags:
+    - public-runner-docker
