Add performance test to hafah rest

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -320,6 +320,35 @@ postgrest_block_api_benchmark_tests:
 postgrest_account_history_benchmark_tests:
   extends: .benchmark_tests
 
+postgrest_rest_benchmark_tests:
+  extends: .jmeter_benchmark_with_haf_job
+  stage: test
+  variables:
+    FF_NETWORK_PER_BUILD: 1
+    HIVED_UID: $HIVED_UID
+    HAF_APP_IMAGE: $HAFAH_IMAGE_NAME
+    HAF_APP_PORT: $APP_PORT
+  needs:
+    - job: prepare_haf_data
+      artifacts: true
+    - job: prepare_postgrest_hafah_image
+      artifacts: true
+  script:
+      - timeout -k 1m 10m ./tests/performance/run_performance_tests.sh --backend-host=app --backend-port=$APP_PORT
+      - tar -czvf tests/performance/results.tar.gz $(pwd)/tests/performance/*result.*
+      - cat jmeter.log | python3 tests/performance/parse-jmeter-output.py
+      - m2u --input $(pwd)/tests/performance/result.xml --output $(pwd)/tests/performance/junit-result.xml
+  artifacts:
+    paths:
+      - docker/container-logs.tar.gz
+      - tests/performance/result_report/
+      - tests/performance/results.tar.gz
+      - jmeter.log
+    reports:
+      junit: tests/performance/junit-result.xml
+  tags:
+    - data-cache-storage
+
 cleanup_hive_cache_manual:
   extends: .cleanup_cache_manual_template
   stage: cleanup
