--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -47,10 +47,11 @@ include:
     ref: f86feed67302eb7b20bbdf30258c4171d159e1c9 # develop
     file: '/scripts/ci-helpers/prepare_data_image_job.yml'
   - project: 'hive/common-ci-configuration'
-    ref: 12db226cfde2df929bb8bcb0c7c51d04c8900d32 # develop # It seems a variable cannot be used here
+    ref: e74d7109838ff05fdc239bced6a726aa7ad46a9b # develop # It seems a variable cannot be used here
     file:
       - '/templates/test_jobs.gitlab-ci.yml'
       - '/templates/python_projects.gitlab-ci.yml'
+      - '/templates/docker_image_jobs.gitlab-ci.yml'
       - '/templates/cache_cleanup.gitlab-ci.yml'
       - '/templates/npm_projects.gitlab-ci.yml'
 
