--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -155,8 +155,8 @@ prepare_haf_data:
       if [[ -n "$CI_COMMIT_TAG" ]]; then
         docker tag "$HAFAH_IMAGE_NAME" "$CI_REGISTRY_IMAGE/instance:$CI_COMMIT_TAG"
         docker push "$CI_REGISTRY_IMAGE/instance:$CI_COMMIT_TAG"
-        docker tag "$CI_REGISTRY_IMAGE/postgrest-rewriter:$HAFAH_IMAGE_TAG" "$CI_REGISTRY_IMAGE/postgrest-rewriter:$CI_COMMIT_IMAGE"
-        docker push "$CI_REGISTRY_IMAGE/postgrest-rewriter:$CI_COMMIT_IMAGE"
+        docker tag "$CI_REGISTRY_IMAGE/postgrest-rewriter:$HAFAH_IMAGE_TAG" "$CI_REGISTRY_IMAGE/postgrest-rewriter:$CI_COMMIT_TAG"
+        docker push "$CI_REGISTRY_IMAGE/postgrest-rewriter:$CI_COMMIT_TAG"
       fi
 
   artifacts:
