Disable the postgrest rewriter's nginx http_rewrite engine logs by default, allow them to be enabled by an environment variable REWRITE_LOG=ON

--- a/docker/hafah_rest_nginx.conf.template
+++ b/docker/hafah_rest_nginx.conf.template
@@ -67,7 +67,10 @@ http {
 
             # Include rewrite rules after setting variables
             include rewrite_rules.conf;
-            rewrite_log on;
+            # ${REWRITE_LOG} will be replaced by the docker entrypoint script.
+            # Set REWRITE_LOG=on in the environment to enable rewrite logging,
+            # otherwise it will remain disabled
+            ${REWRITE_LOG}
 
             proxy_pass  http://hafah-postgrest:3000;  # my PostREST is  here!
 
