--- a/Dockerfile.rewriter
+++ b/Dockerfile.rewriter
@@ -1,7 +1,10 @@
 FROM openresty/openresty:alpine AS without_tag
 
-COPY docker/hafah_rest_nginx.conf /usr/local/openresty/nginx/conf/nginx.conf
+COPY docker/hafah_rest_nginx.conf.template /usr/local/openresty/nginx/conf/nginx.conf.template
 COPY rewrite_rules.conf /usr/local/openresty/nginx/conf/rewrite_rules.conf
+COPY docker/rewriter_entrypoint.sh /entrypoint.sh
+
+CMD ["/entrypoint.sh"]
 
 ARG BUILD_TIME
 ARG GIT_COMMIT_SHA
