--- a/docker/hafah_rest_nginx.conf.template
+++ b/docker/hafah_rest_nginx.conf.template
@@ -82,4 +82,11 @@ http {
             proxy_http_version 1.1;
         }
     }
+    server {
+        listen 0.0.0.0:81;
+
+        location /health {
+            return 204;
+        }
+    }
 }
