--- a/rewrite_rules.conf
+++ b/rewrite_rules.conf
@@ -28,7 +28,7 @@ rewrite ^/operations/([^/]+) /rpc/get_operation?operation-id=$1 break;
 rewrite ^/operations /rpc/get_operations break;
 # endpoint for get /operations
 
-rewrite ^/blocks/([^/]+)/operations /rpc/get_ops_by_block_paging?block-num=$1 break;
+rewrite ^/blocks/([^/]+)/operations /rpc/get_ops_by_block_paging?block-num=$1&path-filter=$path_filters break;
 # endpoint for get /blocks/{block-num}/operations
 
 rewrite ^/blocks/([^/]+)/header /rpc/get_block_header?block-num=$1 break;
