Requires beekeepy instead of helpy

--- a/tests/integration/hafah-local-tools/pyproject.toml
+++ b/tests/integration/hafah-local-tools/pyproject.toml
@@ -14,10 +14,10 @@ source = [
     { name = "PyPI", priority = "primary" },
     { name = "gitlab-schemas", url = "https://gitlab.syncad.com/api/v4/projects/362/packages/pypi/simple", priority = "supplemental" },
     { name = "gitlab-wax", url = "https://gitlab.syncad.com/api/v4/projects/419/packages/pypi/simple", priority = "supplemental" },
-    { name = "gitlab-helpy", url = "https://gitlab.syncad.com/api/v4/projects/434/packages/pypi/simple", priority = "supplemental" },
+    { name = "gitlab-beekeepy", url = "https://gitlab.syncad.com/api/v4/projects/434/packages/pypi/simple", priority = "supplemental" },
 ]
 
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = "^3.12"
 haf_local_tools = { path = "../../../haf/tests/integration/haf-local-tools", develop = true }
