--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,11 +12,12 @@ variables:
   GIT_SUBMODULE_UPDATE_FLAGS: --jobs 4
 
   CI_DEBUG_SERVICES: "true"
-  # uses registry.gitlab.syncad.com/hive/haf/ci-base-image:ubuntu22.04-8
-  BUILDER_IMAGE_TAG: "@sha256:834e666ee84fb78d66a695b274b87f75535f96fda98e51726a23eab60812813b"
+  # uses registry.gitlab.syncad.com/hive/haf/ci-base-image:ubuntu24.04-1
+  BUILDER_IMAGE_TAG: "@sha256:fc149082a4ee91ed622a14d283ae7fe44d13b123f2927d2e71a2167bbe63fab0"
+  BUILDER_IMAGE_PATH: "registry.gitlab.syncad.com/hive/haf/ci-base-image${BUILDER_IMAGE_TAG}"
 
-  # references uses registry.gitlab.syncad.com/hive/hive/ci-base-image:ubuntu22.04-10
-  PYTEST_RUNTIME_IMAGE_NAME: "registry.gitlab.syncad.com/hive/hive/ci-base-image@sha256:080b16fd53013aeb9b89b00a8dfc90fecf886173f46448b05f45cee376c43330"
+  # references registry.gitlab.syncad.com/hive/hive/ci-base-image:ubuntu24.04-1
+  PYTEST_RUNTIME_IMAGE_NAME: "registry.gitlab.syncad.com/hive/hive/ci-base-image@sha256:813f18c42929193036fc4e0017981c16913766442ef8d146313c64785df29c2e"
   POETRY_INSTALL_DIR: "${CI_PROJECT_DIR}/haf/hive/tests/python/hive-local-tools"
 
   SETUP_SCRIPTS_PATH: "$CI_PROJECT_DIR/haf/scripts"
@@ -33,10 +34,6 @@ variables:
     "host    all              all              0.0.0.0/0    scram-sha-256"
 
 
-  # Variables required by Common CI jobs
-  TOX_IMAGE_TAG: "6b9e9e75ec5263939450936a4f8348dfbca3666d"
-  BUILDER_IMAGE_PATH: "registry.gitlab.syncad.com/hive/haf/ci-base-image${BUILDER_IMAGE_TAG}"
-
   # Variables specific to runner (there is single runner cache and there is 5m block_log available)
   DATA_CACHE_HIVE_PREFIX: "/cache/replay_data_hive"
   DATA_CACHE_HAF_PREFIX: "/cache/replay_data_haf"
@@ -45,16 +42,9 @@ variables:
 include:
 - template: Workflows/Branch-Pipelines.gitlab-ci.yml
 - project: 'hive/haf'
-  ref: a7146e11ea31a2d8b615aad30f7ac699df95c246   # develop
+  ref: 18f105eecfb3e47cd4f995801ad65c430d568cbb   # develop
   file: '/scripts/ci-helpers/prepare_data_image_job.yml'
-- project: 'hive/common-ci-configuration'
-  ref: 6b9e9e75ec5263939450936a4f8348dfbca3666d   # develop # It seems a variable cannot be used here
-  file:
-  - '/templates/test_jobs.gitlab-ci.yml'
-  - '/templates/python_projects.gitlab-ci.yml'
-  - '/templates/docker_image_jobs.gitlab-ci.yml'
-  - '/templates/cache_cleanup.gitlab-ci.yml'
-  - '/templates/npm_projects.gitlab-ci.yml'
+  # Do not include common-ci-configuration here, it is already referenced by scripts/ci-helpers/prepare_data_image_job.yml included from Haf/Hive repos
 
 verify_poetry_lock_sanity:
   extends: .verify_poetry_lock_sanity_template
