--- a/rewrite_rules.conf
+++ b/rewrite_rules.conf
@@ -7,6 +7,12 @@ rewrite ^/headblock /rpc/get_head_block_num break;
 rewrite ^/version /rpc/get_version break;
 # endpoint for get /version
 
+rewrite ^/market-history/recent-trades /rpc/get_recent_trades break;
+# endpoint for get /market-history/recent-trades
+
+rewrite ^/market-history/trade-history /rpc/get_trade_history break;
+# endpoint for get /market-history/trade-history
+
 rewrite ^/accounts/([^/]+)/operation-types /rpc/get_acc_op_types?account-name=$1 break;
 # endpoint for get /accounts/{account-name}/operation-types
 
